--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-"Hello World" 
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Главное верить</title>
+<style>
+*
+{
+	margin: 0;
+	padding: 0;
+}
+
+html, body
+{
+	height: 100%;
+}
+
+#wrapper
+{
+	height: 100%;
+	width: 100%;
+	display: table;
+	vertical-align: middle;
+}
+
+#outer
+{
+	display: table-cell;
+	vertical-align: middle;
+	text-align: center;
+}
+</style>
+</head>
+<body>
+
+<div id="wrapper">
+	<div id="outer">
+		Скоро здесь что-нибудь будет.
+	</div>
+</div>
+
+</body>
+</html>
